--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,7 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 1.625em;
-    position: relative; }
+        position: fixed; }
   
   ol, ul {
     margin: 0;
